--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
     <!-- Navigation -->
     <nav id="navbar">
         <div class="nav-container">
-            <img src="https://iili.io/KHHOfA7.md.png" class="logo">
+            <img src="img/logo.png" class="logo">
             <button class="mobile-menu-btn" id="mobileMenuBtn">
                 <i class="fas fa-bars"></i>
             </button>
@@ -806,7 +806,7 @@
                 </p>
             </div>
             <div class="about-image">
-                <img src="https://iili.io/K9DMpz7.jpg" alt="Profile Picture">
+                <img src="img/profil.jpg" alt="Profile Picture">
             </div>
         </div>
     </section>
