--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('https://iili.io/K9DWHTN.md.png');
+            background-image: url('img/background.png');
                 background-size: cover;
                 background-position: center;
                 opacity: 0.3;
@@ -861,7 +861,7 @@
         <div class="projects-container">
             <div class="project-card">
                 <div class="project-image">
-                    <img src="https://iili.io/K9DX2AQ.png" alt="Project 1">
+                    <img src="img/debt.png" alt="Project 1">
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">Debt Tracker</h3>
@@ -885,7 +885,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="https://iili.io/K9DXUbV.png" alt="Project 2">
+                    <img src="img/calendar22.png" alt="Project 2">
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">Hijri calendar</h3>
@@ -908,7 +908,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="https://iili.io/K9DhmYb.png" alt="Project 3">
+                    <img src="img/desainer.png" alt="Project 3">
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">Futuristic Design</h3>
