--- a/index.html
+++ b/index.html
@@ -888,13 +888,14 @@
                     <img src="img/calendar22.png" alt="Project 2">
                 </div>
                 <div class="project-content">
-                    <h3 class="project-title">Hijri calendar</h3>
+                    <h3 class="project-title">Fasting Calendar</h3>
                     <p class="project-description">
-                       Saya mengembangkan Hijriah App untuk memudahkan umat Islam mengakses kalender Islam—sebuah solusi praktis di tengah tantangan modern yang sering membuat tradisi berharga terlupakan.”
+                       Saya mengembangkan Kalender Puasa sunnah, Buka source‑code hati, jalankan script kebaikan: puasa sunnah pada hari‑hari terpilih, otomatis ter‑sync ke kalendermu.”
                     </p>
                     <div class="project-tech">
-                        <span class="tech-tag">Python</span>
-                        <span class="tech-tag">Termux</span>
+                        <span class="tech-tag">HTML</span>
+                        <span class="tech-tag">CSS</span>
+                        <span class="tech-tag">JavaScript</span>
                     </div>
                     <div class="project-links">
                         <a href="#" class="project-link">
